# Threadcheck

./: .gitignore  PLAN.md  README.md  README_CN.md  README_EN.md  pyproject.toml
.github/workflows/: diagnose_hook.py  diagnose_pytest.py  publish.yml  release.yml  test.yml
demo/: race_example.py  run_demo.py
scripts/: tag_wheel.py
src/threadcheck/: __init__.py  _tid.py  _tid_macos.py  _tid_win.py  _version.py  cli.py  config.py  pytest_plugin.py
src/threadcheck/compat/: __init__.py  checker.py  models.py
src/threadcheck/dynamic/: __main__.py  clock.py  hook.py  tracker.py  transform.py
src/threadcheck/reporting/: __init__.py  formatter.py  html.py  sarif.py  types.py
src/threadcheck/static/: analyzer.py  lock_tracker.py  models.py  visitors.py
tests/: test_compat.py  test_config.py  test_dynamic_detector.py  test_formatter.py  test_pytest_plugin.py  test_sarif.py  test_static_analyzer.py
tests/fixtures/: class_attribute_safe.py  class_race.py  class_safe.py  closure_lock_safe.py  cross_module_main.py  cross_module_worker.py  dynamic_race.py  dynamic_read_race.py  dynamic_safe.py  dynamic_subscript_race.py  futures_race.py  inline_ignore.py  manual_lock.py  name_main_guard.py  nested_locks.py  no_race_simple.py  nonlocal_race.py  safe_with_lock.py  shared_list.py  simple_global.py  thread_subclass_race.py
tmp_diagnose/: diagnose_mod.py  test_diag.py
