[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "threadcheck"
dynamic = ["version"]
description = "Data Race Detector for Free-Threading Python"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "threadcheck contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Debuggers",
]

[project.urls]
Homepage = "https://github.com/ChidcGithub/Threadcheck"
Source = "https://github.com/ChidcGithub/Threadcheck"
BugTracker = "https://github.com/ChidcGithub/Threadcheck/issues"

[project.scripts]
threadcheck = "threadcheck.cli:main"

[project.entry-points.pytest11]
threadcheck = "threadcheck.pytest_plugin"

[project.optional-dependencies]
test = ["pytest"]

[tool.hatch.version]
path = "src/threadcheck/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/threadcheck"]
exclude = [
    "src/threadcheck/_tid_win.py",
    "src/threadcheck/_tid_linux.py",
    "src/threadcheck/_tid_macos.py",
]
